fixed squishing on search
Conflicts:
	menu.js

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ header span#title {
 
 #content {
 	clear: both;
-	width: auto;
+	width: 100%;
 	float: left; /* thanks to the magic crystal ball @ http://stackoverflow.com/a/2849494/303795 */
 	position: fixed;
 	top: 65px; /* needs to match header height */
